start game button toegevoegd

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,5 +16,10 @@
         </div>
     </header>
 <!-- END HEADER -->
+
+<!-- START GAME BUTTON -->
+<div class="button">Start Game</div>
+<!-- END START GAME BUTTON -->
+
 </body>
 </html>
