--- a/HTML/info.html
+++ b/HTML/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SDG Game</title>
+    <title>Over NVVN</title>
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel=icon type="img/x-icon" href="/IMG'S/NVVN-favicon.png">
 </head>
@@ -12,14 +12,9 @@
     <header class="headerrr">
         <img class="logo" src="/IMG'S/output-onlinepngtools.png" alt=""></a>
         <div class="headerdiv">
-            <a class="items" href="/HTML/info.html">OVER NVVN</a>
+            <a class="items" href="/HTML/index.html">HOMEPAGE</a>
         </div>
     </header>
 <!-- END HEADER -->
-
-<!-- START GAME BUTTON -->
-<div class="button">Start Game</div>
-<!-- END START GAME BUTTON -->
-
 </body>
 </html>
